--- a/index.html
+++ b/index.html
@@ -33,6 +33,39 @@
 			</div>
 		</div>
     </div>
+	<!-- Header area -->
+    <div id="header-wrapper" class="header-slider">
+		<header class="clearfix">
+			<div class="logo">
+				<img src="img/logo-image.png" alt="" />
+			</div>
+			<div class="container">
+				<div class="row">
+					<div class="span12">
+						<div id="main-flexslider" class="flexslider">
+							<ul class="slides">
+								<li>
+									<p class="home-slide-content">
+										<strong>creative</strong> and passion
+									</p>
+								</li>
+								<li>
+									<p class="home-slide-content">
+										Eat and drink <strong>design</strong>
+									</p>
+								</li>
+								<li>
+									<p class="home-slide-content">
+										We loves <strong>simplicity</strong>
+									</p>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</header>
+	</div>
 
 </body>
 </html>
