--- a/index.html
+++ b/index.html
@@ -195,6 +195,180 @@
 				</div>
 			</div>
 		</div>
+    </section>
+    
+    <!-- Portfolio section -->
+	<section id="works" class="section">
+		<div class="container clearfix">
+			<h4>Our Works</h4>
+			<div class="row">
+				<div id="filters" class="span12">
+					<ul class="clearfix">
+						<li>
+							<a href="#" data-filter="*" class="active">
+								<h5>All</h5>
+							</a>
+						</li>
+						<li>
+							<a href="#" data-filter=".web">
+								<h5>Web</h5>
+							</a>
+						</li>
+						<li>
+							<a href="#" data-filter=".print">
+								<h5>Print</h5>
+							</a>
+						</li>
+						<li>
+							<a href="#" data-filter=".design">
+								<h5>Design</h5>
+							</a>
+						</li>
+						<li>
+							<a href="#" data-filter=".photography">
+								<h5>Photography</h5>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="span12">
+					<div id="portfolio-wrap">
+						<div class="portfolio-item grid print photography">
+							<div class="portfolio">
+								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/1.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Portfolio name</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<div class="portfolio-item grid print design web">
+							<div class="portfolio">
+								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/2.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Portfolio name</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<div class="portfolio-item grid print design">
+							<div class="portfolio">
+								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/3.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Portfolio name</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<div class="portfolio-item grid photography web">
+							<div class="portfolio">
+								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/4.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Portfolio name</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<div class="portfolio-item grid photography web">
+							<div class="portfolio">
+								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/5.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Portfolio name</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<div class="portfolio-item grid photography web">
+							<div class="portfolio">
+								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/6.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Portfolio name</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<div class="portfolio-item grid photography web">
+							<div class="portfolio">
+								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/7.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Portfolio name</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<div class="portfolio-item grid photography">
+							<div class="portfolio">
+								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/8.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Portfolio name</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<div class="portfolio-item grid photography web">
+							<div class="portfolio">
+								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/9.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Portfolio name</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<div class="portfolio-item grid design web">
+							<div class="portfolio">
+								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/10.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Portfolio name</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 
 </body>
