--- a/index.html
+++ b/index.html
@@ -519,7 +519,28 @@
 				</div>
 			</div>
 		</div>
-	</section>
+    </section>
+    
+    <footer>
+		<div class="container">
+			<div class="row">
+				<div class="span6 offset3">
+					<ul class="social-networks">
+						<li><a href="#"><i class="icon-circled icon-bgdark icon-instagram icon-2x"></i></a></li>
+						<li><a href="#"><i class="icon-circled icon-bgdark icon-twitter icon-2x"></i></a></li>
+						<li><a href="#"><i class="icon-circled icon-bgdark icon-dribbble icon-2x"></i></a></li>
+						<li><a href="#"><i class="icon-circled icon-bgdark icon-pinterest icon-2x"></i></a></li>
+					</ul>
+					<p class="copyright">
+						&copy; Maxim Theme. All rights reserved.
+						<div class="credits">
+							Designed by <a href="#">Oleh Petraniuk</a>
+						</div>
+					</p>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 </body>
 </html>
