--- a/page.html
+++ b/page.html
@@ -46,7 +46,18 @@
 				</div>
 			</div>
 		</div>
-	</div>
+    </div>
+    
+    <!-- spacer section -->
+	<section class="spacer green">
+		<div class="container">
+			<div class="row">
+				<div class="span12 aligncenter flyUp">
+					<h2 class="pagetitle">Maxim <strong>Components</strong></h2>
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 
