--- a/page.html
+++ b/page.html
@@ -57,6 +57,62 @@
 				</div>
 			</div>
 		</div>
+    </section>
+    
+    <!-- section: team -->
+	<section id="maincontent" class="inner">
+		<div class="container">
+			<div class="row">
+				<div class="span6">
+					<h4>Tabs</h4>
+					<div class="tabbable">
+						<ul class="nav nav-tabs">
+							<li class="active"><a href="#one" data-toggle="tab"><i class="icon-rocket"></i> One</a></li>
+							<li><a href="#two" data-toggle="tab">Two</a></li>
+							<li><a href="#three" data-toggle="tab">Three</a></li>
+						</ul>
+						<div class="tab-content">
+							<div class="tab-pane active" id="one">
+								<p>
+									<strong>Augue iriure</strong> dolorum per ex, ne iisque ornatus veritus duo. Ex nobis integre lucilius sit, pri ea falli ludus appareat. Eum quodsi fuisset id, nostro patrioque qui id. Nominati eloquentiam in mea.
+								</p>
+								<p>
+									No eum sanctus vituperata reformidans, dicant abhorreant ut pro. Duo id enim iisque praesent, amet intellegat per et, solet referrentur eum et.
+								</p>
+								<p>
+									Tale dolor mea ex, te enim assum suscipit cum, vix aliquid omittantur in. Duo eu cibo dolorum menandri, nam sumo dicit admodum ei. Ne mazim commune honestatis cum, mentitum phaedrum sit et.
+								</p>
+							</div>
+							<div class="tab-pane" id="two">
+								<p>
+									Tale dolor mea ex, te enim assum suscipit cum, vix aliquid omittantur in. Duo eu cibo dolorum menandri, nam sumo dicit admodum ei. Ne mazim commune honestatis cum, mentitum phaedrum sit et.
+								</p>
+								<p>
+									Tale dolor mea ex, te enim assum suscipit cum, vix aliquid omittantur in. Duo eu cibo dolorum menandri, nam sumo dicit admodum ei. Ne mazim commune honestatis cum, mentitum phaedrum sit et.
+								</p>
+							</div>
+							<div class="tab-pane" id="three">
+								<p>
+									Cu cum commodo regione definiebas. Cum ea eros laboramus, audire deseruisse his at, munere aeterno ut quo. Et ius doming causae philosophia, vitae bonorum intellegat usu cu.
+								</p>
+								<p>
+									Tale dolor mea ex, te enim assum suscipit cum, vix aliquid omittantur in. Duo eu cibo dolorum menandri, nam sumo dicit admodum ei. Ne mazim commune honestatis cum, mentitum phaedrum sit et.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				
+
+			
+			
+
+
+			
+
+		</div>
+		<!-- end container -->
 	</section>
 
 
