--- a/page.html
+++ b/page.html
@@ -105,7 +105,6 @@
 
 				<div class="span6">
 					<h4>Accordion</h4>
-					<!-- start: Accordion -->
 					<div class="accordion" id="accordion2">
 						<div class="accordion-group">
 							<div class="accordion-heading">
@@ -147,7 +146,54 @@
 							</div>
 						</div>
 					</div>
-					<!--end: Accordion -->
+				</div>
+            </div>
+            
+            <div class="row">
+				<div class="span6">
+					<h4>Alerts</h4>
+					<div class="alert">
+						<button type="button" class="close" data-dismiss="alert">&times;</button>
+						<strong>Warning!</strong> Best check yo self, you're not looking too good.
+					</div>
+					<div class="alert alert-error">
+						<button type="button" class="close" data-dismiss="alert">&times;</button>
+						<strong>Oh snap!</strong> Change a few things up and try submitting again.
+					</div>
+					<div class="alert alert-success">
+						<button type="button" class="close" data-dismiss="alert">&times;</button>
+						<strong>Well done!</strong> Change a few things up and try submitting again.
+					</div>
+					<div class="alert alert-info">
+						<button type="button" class="close" data-dismiss="alert">&times;</button>
+						<strong>Heads up!</strong> Change a few things up and try submitting again.
+					</div>
+				</div>
+				<div class="span6">
+					<h4>Progress</h4>
+					<div class="progress progress-primary">
+						<div class="bar" style="width: 40%;"></div>
+					</div>
+					<div class="progress progress-striped">
+						<div class="bar" style="width: 20%;"></div>
+					</div>
+					<div class="progress progress-striped active">
+						<div class="bar" style="width: 40%;"></div>
+					</div>
+					<div class="progress progress-success">
+						<div class="bar" style="width: 50%;"></div>
+					</div>
+
+					<div class="progress progress-info">
+						<div class="bar" style="width: 60%;"></div>
+					</div>
+					<div class="progress progress-warning">
+						<div class="bar" style="width: 70%;"></div>
+					</div>
+					<div class="progress progress-danger">
+						<div class="bar" style="width: 80%;"></div>
+					</div>
+
 				</div>
 			</div>
 
@@ -158,7 +204,6 @@
 			
 
 		</div>
-		<!-- end container -->
 	</section>
 
 
