Add Button types&size

--- a/page.html
+++ b/page.html
@@ -197,13 +197,53 @@
 				</div>
 			</div>
 
-			
-			
+			<div class="row">
+				<div class="span12">
+					<h4 class="heading">Button types<span></span></h4>
+
+					<a href="#" class="btn">btn default</a>
+					<a href="#" class="btn btn-theme">btn btn-theme</a>
+					<a href="#" class="btn btn-primary">btn-primary</a>
+					<a href="#" class="btn btn-warning">btn-warning</a>
+					<a href="#" class="btn btn-danger">btn-danger</a>
+					<a href="#" class="btn btn-info">btn-info</a>
+					<a href="#" class="btn btn-success">btn-success</a>
+					<a href="#" class="btn btn-inverse">btn-inverse</a>
+				</div>
+			</div>
 
 
-			
+			<div class="row">
+				<div class="span6">
+
+					<h4 class="heading">Button sizes<span></span></h4>
+
+					<p>There are 4 button sizes: mini, small, normal and large</p>
+
+					<a href="#" class="btn btn-mini btn-primary">mini size</a>
+					<a href="#" class="btn btn-small btn-warning">small size</a>
+					<a href="#" class="btn btn-danger">normal size</a>
+					<a href="#" class="btn btn-large btn-info">Large size</a>
+
+				</div>
+				<div class="span6">
+					<h4 class="heading">Button edge<span></span></h4>
+
+					<p>There are 3 button edge variations: normal, rounded and flat. Simply adding <code>btn-rounded</code> or <code>btn-flat</code> class and you'll get different button edge</p>
+
+					<a href="#" class="btn btn-primary">normal primary</a>
+
+					<a href="#" class="btn btn-warning btn-rounded">rounded button</a>
+					<a href="#" class="btn btn-danger btn-flat">flat button</a>
+
+					<a href="#" class="btn btn-primary btn-large btn-rounded">large rounded</a>
+					<a href="#" class="btn btn-warning btn-mini btn-rounded">rounded button</a>
+
+				</div>
+			</div>
 
 		</div>
+		<!-- end container -->
 	</section>
 
 
