Add Footer section

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 						<li><a href="#"><i class="icon-circled icon-bgdark icon-pinterest icon-2x"></i></a></li>
 					</ul>
 					<p class="copyright">
-						&copy; Maxim Theme. All rights reserved.
+						&copy; Business Theme. All rights reserved.
 						<div class="credits">
 							Designed by <a href="#">Oleh Petraniuk</a>
 						</div>
